css/index.css
/** PAGE ESSENTIALS */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --section-height: 670px;
  --icon-size: 50%;
}

body {
  overflow-x: hidden;
  background-color: var(--a-clr);
}

.section {
  height: var(--section-height);
  background-color: var(--a-clr-dark);
  padding-top: 3rem;
  position: relative;
  overflow: hidden;
}

.section__header {
  text-align: center;
  font-size: 2.5rem;
}

.section__header:hover {
  text-decoration: underline 2px;
  cursor: pointer;
}

.section:nth-child(2n + 1) {
  background-color: var(--a-clr);
}

.section:nth-child(2n) {
  clip-path: polygon(0 5%, 100% 0, 100% 95%, 0% 100%);
}

.section:nth-child(2n) > .section__header {
  color: white;
}

.section__info {
  text-align: center;
  font-size: 1.3rem;
  margin-top: 1rem;
}

/** INTRO SECTION STYLES */

.section__intro .section__header {
  all: unset;
  text-align: left;
  font-size: 4.2rem;
  position: absolute;
  left: -100%;
  top: 30%;
  transform: translateY(-50%);
  opacity: 0;
  transition: 500ms ease;
  transition-property: left, opacity;
  z-index: 5;
}

.section__intro .section__header.scroll {
  left: 2rem;
  opacity: 1;
}

.slogan {
  font-size: 1.3rem;
  position: absolute;
  top: calc(30% + 3rem);
  left: 2rem;
  color: #111;
}

.star-container {
  position: absolute;
  left: 2rem;
  top: calc(30% + 8rem);
  transform: scaleX(0);
  transform-origin: left;
  opacity: 0;
  z-index: 4;
  transition: 500ms ease;
  transition-property: opacity, transform;
}

.star-container.scroll {
  transform: scaleX(1);
  opacity: 1;
  transition-delay: 500ms;
}


.anchor__seeMore {
  color: #333;
  font-size: 1.3rem;
  position: absolute;
  bottom: 20%;
  left: -100%;
  z-index: 3;
  transition: left 500ms ease;
}

.anchor__seeMore.scroll {
  left: 2rem;
  transition-delay: 1000ms;
}

.anchor__seeMore:where(:hover, :focus) {
  color: black;
}

.favicon {
  position: absolute;
  right: 25%;
  bottom: 40%;
  transform: translate(50%, 50%) rotate(30deg);
  height: clamp(20rem, 30rem, 50vw);
  aspect-ratio: 1;
  border-radius: 50%;
  border: solid 1px white;
}


/** SKILLS SECTION STYLES  */

:root {
  counter-reset: progress-after;
}

.progress-container {
  padding: 1.5rem;
  background-color: var(--clr-neutral);
  width: clamp(65vw, 50rem, 80vw);
  height: 60%;
  position: relative;
  top: 6rem;
  left: 50%;
  transform: translate(-50%);
  box-shadow: 0 0 0.5rem black;
  border-radius: 1rem;
}

.full-progress-bar {
  --top-number: 10%;
  --increment: 17.5%;

  width: 90%;
  background-color: var(--clr-neutral);
  border: solid 1px black;
  height: 1.2rem;
  position: absolute;
  border-radius: 1rem;
  display: flex;
  align-items: center;
}

.full-progress-bar::before {
  content: attr(data-lang) attr(data-progress);
  position: absolute;
  top: -1.3rem;
  font-size: 1.2rem;
}

.actual-progress {
  transition: width 500ms ease;
  height: 100%;
  border-radius: 1rem;
  width: 0;
  background: linear-gradient(45deg, var(--a-clr) 60%, var(--a-clr-dark) 5%);
}

.full-progress-bar.full-html {
  top: var(--top-number);
}

.full-progress-bar.full-css {
  top: calc(var(--top-number) + var(--increment));
}

.full-progress-bar.full-js {
  top: calc(var(--top-number) + calc(var(--increment) * 2));
}

.full-progress-bar.full-python {
  top: calc(var(--top-number) + calc(var(--increment) * 3));
}

.full-progress-bar.full-java {
  top: calc(var(--top-number) + calc(var(--increment) * 4));
}

/** EXPLORE SECTION STYLES */

/* editing swiper JS styles */

.swiper {
  width: clamp(45vw, 50rem, 90vw);
  height: 500px;
  position: absolute;
  top: 5%;
  padding: 2rem;
}

.swiper-slide {
  height: 100%;
  width: 100%;
  background-color: white;
  border-radius: 1rem;
  text-align: center;
  padding: 1rem;
}

.slide-icon {
  height: 40%;
  width: fit-content;
  background-color: #ddd;
  border-radius: 1rem;
  padding: 1rem;
  border: solid 3px var(--a-clr);
}

.slide-header {
  margin-top: 6rem;
}

.slide-description {
  margin-top: 1rem;
  font-size: large;
}

.explore-btn {
  background-color: var(--a-clr);
  color: white;
  padding: 0.75em 1.25em;
  border-radius: 0.2rem;
  border: none;
  cursor: pointer;
  transition: filter 250ms ease;
  margin-top: 1rem;
}

.explore-btn:focus,
.explore-btn:hover {
  filter: brightness(1.2);
}

/** WORK SECTION STYLES */

.no-work {
  color: white;
  font-size: large;
  text-align: center;
  margin-inline: 3rem;
  margin-top: 2rem;
}

.card, .card * {
  --green: #6dddbd;
  --dark: #2e333b;
  color: white;
}

.card::selection, .card *::selection {
  background-color: var(--green) !important;
}

.card {
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 70%;
  width: clamp(25rem, 35vw, 90vw);
  background-color: var(--dark);
  border-radius: .5rem;
  padding: 2rem;
  overflow: hidden;
  transition: transform 500ms ease;
}

.card:where(:hover, :focus-within) {
  transform: translate(-50%, -50%) scale(1.05);
  outline: none !important;
}

.card-logo {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  opacity: .5;
  object-fit: cover;
  pointer-events: none;
  transition: opacity 500ms ease;
}

.card:where(:hover, :focus-within) .card-logo {
  opacity: .1;
}

.card-title {
  font-size: 2rem;
  position: relative;
  top: 90%;
  transition: top 500ms ease;
}

.card:where(:hover, :focus-within) .card-title {
  top: 4rem;
}

.card-title::after {
  content: '';
  position: absolute;
  bottom: -50%;
  left: 0;
  width: 200%;
  height: 4px;
  background-color: var(--green);
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 500ms ease;
}

.card:where(:hover, :focus-within) .card-title::after {
  transform: scaleX(1);
  transform-origin: left;
  transition-delay: 500ms;
}

.card-show {
  opacity: 0;
  pointer-events: none;
  transition: opacity 500ms ease;
  position: absolute;
  top: 12rem;
}

.card:where(:hover, :focus-within) .card-show {
  opacity: 1;
  pointer-events: all;
  transition-delay: 1000ms;
}

.card-brief {
  color: #ddd;
  font-size: 1.1rem;
  margin-bottom: 3rem;
}

.card-visit {
  background-color: var(--green);
  padding: .5em 1.2em;
  color: #000;
  border-radius: .2rem;
  transition: 500ms ease;
  border: solid 1px transparent;
  transition-property: background-color, border, color;
}

.card-visit:where(:hover, :focus) {
  background-color: transparent;
  border: solid 1px white;
  color: white;
  outline: none !important;
}

/** CONTACT SECTION STYLES */

.contact__flex {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  top: 3rem;
}

.contact-form {
  display: grid;
  gap: 1.5rem;
  grid-template-rows: repeat(auto, 1fr);
  background-color: var(--selection-color);
  padding: 1.75rem;
  padding-bottom: 3rem;
  width: 65%;
  transition: width 250ms ease;
}

.form__name, .form__message, .form__submit {
  border-radius: 4px;
}

.contact-form .form__name {
  padding: 0.75rem;
  font-size: 1.1rem;
  caret-color: var(--a-clr);
  color: var(--a-clr);
  max-width: 100%;
  border: solid 3px var(--a-clr-dark);
  border-radius: 0.2rem;
  outline: none;
}

.contact-form .form__message {
  font-size: 1.1rem;
  caret-color: var(--a-clr);
  color: var(--a-clr);
  resize: none;
  height: 10rem !important;
  padding: 1rem 2rem 1rem 1rem;
  border: solid 3px var(--a-clr-dark);
  outline: none;
}

.contact-form .form__submit {
  background-color: var(--a-clr-dark);
  color: var(--clr-neutral);
  border: solid 2px var(--clr-neutral);
  border-radius: .2rem;
  padding: .5em 1.25em;
  font-size: 1em;
  cursor: pointer;
  outline: none;
  transition: 500ms ease;
  transition-property: color, background-color;
  box-shadow: inset 0 0 0 0 var(--selection-color);
}

.contact-form .form__submit:hover,
.contact-form .form__submit:focus {
  background-color: white;
  color: black;
}

@media (max-width: 545px){

  .contact-form {
    width: 90%;
  }

}


/** FOOTER SECTION STYLES */

.section__footer {
  overflow-y: hidden;
  clip-path: none !important;
}

.footerSection.fsMore {
  height: 100%;
  width: 100%;
}

.navigation-flex {
  display: flex;
  justify-content: space-around;
  gap: 1.5rem;
}

.pages-nav {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%);
}

.socialMedia-nav {
  position: absolute;
  top: 60%;
  left: 50%;
  transform: translate(-50%);
}

.nav-anchor {
  font-size: 1.4rem;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-anchor:hover,
.nav-anchor:focus,
.nav-anchor:focus-within {
  color: var(--a-clr);
  filter: brightness(1.35);
}

.nav-anchor::before {
  font-family: "bootstrap-icons";
  margin-right: 0.25rem;
}

.anchorHome::before {
  content: "\f425";
}

.anchorProjects::before {
  content: "\f3d7";
}

.anchorSettings::before {
  content: "\f3e5";
}

.anchorDiscord::before {
  content: "\f300";
}

.anchorGithub::before {
  content: "\f3ed";
}

.anchorYoutube::before {
  content: "\f62b";
}

.bottom-text {
  position: absolute;
  bottom: 1rem;
  color: white;
  left: 50%;
  transform: translate(-50%);
}

